--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
         </section>
         <section id="contact">
-            <h2>Contato</h2>
-            <p>Entre em contato comigo pelos links abaixo:</p>
+            <h2>Contacto</h2>
+            <p>Entre em contacto comigo pelos links abaixo:</p>
             <div class="contact-links">
                 <a href="https://wa.me/+258846967603" target="_blank">WhatsApp</a>
                 <a href="https://www.facebook.com/profile.php?id=100078355417100" target="_blank">Facebook</a>
